styles/app.scss
@import 'reset';
@import 'fonts';
@import 'mixins';

$breakpoint: 'max-width: 960px';

$transparent-white: rgba(255,255,255, 0.97);

.homePage {
  text-align: center;

  h1 {
    font-size: 100px;
    margin-top: 100px;
    letter-spacing: -6px;
  }

  h2 {
    font-size: 25px;
    margin-top: 30px;
  }

  button {
    font-size: 40px;
    font-weight: bold;
    margin-top: 50px;
    padding: 20px 40px;
  }

  .temporary {
    color: #888;
    font-size: 14px;
    margin-top: 50px;
  }
}

.modal {
  align-items: center;
  background: rgba(0,0,0,0.4);
  display: flex;
  justify-content: center;
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: 20;

  .modalInner {
    background: $transparent-white;
    box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.2);
    border-radius: 15px;
    max-width: 700px;
    padding: 20px;
    width: 100%;

    h2 {
      font-size: 24px;
      margin-bottom: 15px;
    }

    h3 {
      font-size: 20px;
      margin: 15px 0;
    }
  }
}

.roomPage {
  position: absolute;
  top: 0; left: 0;
  display: grid;
  height: 100%;
  width: 100%;
  grid-template-columns: auto;
  grid-template-rows: auto;

  &.showChat {
    grid-template-columns: auto 300px;

    .textChat {
      display: grid;
    }
  }

  .videoChat {
    position: relative;

    > header, > footer {
      background-color: $transparent-white;
      height: 70px;
      position: absolute;
      transition: 250ms ease-in;
      width: 100%;
      z-index: 10;
    }

    > header {
      top: 0;
    }

    > section {
      height: 100%;
      width: 100%;
    }

    > footer {
      bottom: 0;
    }
  }

  &.hideControls {
    .videoChat {
      > header {
        background-color: transparent;
        border: 0;

        h1 {
          color: #fff;
          text-shadow: 0 0 5px rgba(0,0,0,0.6);
          opacity: 0.9;
        }

        .controls {
          opacity: 0;
        }
      }

      > section {
        &.videos-count-2 .video:nth-child(2) {
          top: 0;
        }
      }

      > footer {
        background-color: transparent;
        border-color: transparent;

        .left {
          .screenShareButton {
            color: #fff;
            opacity: 0;

            svg {
              color: #fff;
            }

            &.shared {
              opacity: 1;
            }
          }
        }

        .center {
          .button {
            background-color: rgba(255,255,255, 0.1);
            border-color: rgba(255,255,255, 0.1);

            svg {
              color: rgba(255,255,255, 0.9);
            }
          }
        }

        .right {
          .textChatButton {
            color: #fff;
            opacity: 0;

            svg {
              color: #fff;
            }

            &.hasHiddenMessages {
              opacity: 1;
            }
          }
        }
      }
    }
  }

  .textChat {
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: 70px auto 70px;
    overflow: auto; // this hack makes children scrollable
  }

  .videoChat, .textChat {
    > header {
      border-bottom: 1px solid rgba(0,0,0,0.1);
    }

    > section {
      overflow-y: auto;
    }

    > footer {
      border-top: 1px solid rgba(0,0,0,0.1);
    }
  }

  .textChat {
    > * {
      border-left: 1px solid rgba(0,0,0,0.1);
    }

    display: none;
  }

  &.roomSetup {
    .videoChat > section {
      align-items: center;
      display: flex;
      justify-content: center;
    }
  }
}

.leftRoom {
  align-items: center;
  display: flex;
  flex-direction: column;
  height: 100vh;
  justify-content: center;

  h1 {
    font-size: 28px;
    margin-bottom: 20px;
  }

  button {
    width: 100px;
    // This shifts the content up
    margin-bottom: 100px;
  }
}

.roster {
  display: none;
}

.textChat {
  .messages {
    background: #f7f7f7;
    padding: 10px;

    .message {
      margin-bottom: 10px;
      margin-left: 40px;
      position: relative;

      .avatar {
        border-radius: 50%;
        height: 35px;
        width: 35px;

        position: absolute;
        left: -40px;
        bottom: 0;
      }

      .name {
        // TODO: bring these back with message collapsing.
        display: none;
        color: #555;
        font-size: 12px;
        margin-bottom: 2px;
        margin-left: 10px;
      }

      .text {
        background: #fff;
        border-radius: 18px;
        font-size: 13px;
        line-height: 1.2em;
        padding: 10px;
      }
    }
  }

  .chatBox {
    align-items: center;
    display: flex;
    overflow: hidden;

    input {
      border: 0;
      flex-grow: 1;
      height: 60px;
      outline: 0;
      padding: 10px;
      // TODO: make this flex
      width: 240px;
    }

    button {
      background: #bbb;
      border: 0;
      border-radius: 50%;
      flex-basis: auto;
      height: 42px;
      outline: 0;
      width: 42px;

      svg {
        color: #fff;
      }
    }
  }
}
/* ... */

